HHH-14792 Remove support for bytecode enhancement via Javassist