@@ -28,31 +28,17 @@ sourceSets {
             setSrcDirs( ['src/test/java','src/test/resources','src/test/bundles'] )
         }
     }
-
-    testJavassist {
-        java {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
-        }
-    }
 }
 
 configurations {
     tests {
         description = 'Configuration for the produced test jar'
     }
-
-    //Configures the compile and runtime configurations for our javassist tests
-    //and includes the dependencies of the test task.
-    testJavassistCompile.extendsFrom testCompile
-    testJavassistRuntime.extendsFrom testRuntime
 }
 
 dependencies {
 
     compile( libraries.jpa )
-    // This can now be made provided
-    compile( libraries.javassist )
     // Could be made optional?
     compile( libraries.byteBuddy )
     compile( libraries.antlr )
@@ -103,7 +89,6 @@ dependencies {
     testRuntime( "org.jboss.spec.javax.ejb:jboss-ejb-api_3.2_spec:1.0.0.Final" )
     testRuntime( libraries.expression_language )
     testRuntime( 'jaxen:jaxen:1.1' )
-    testRuntime( libraries.javassist )
     testRuntime( libraries.byteBuddy )
     testRuntime( libraries.weld )
     testRuntime( libraries.atomikos )
@@ -118,9 +103,6 @@ dependencies {
     testCompile libraries.jboss_ejb_spec_jar
     testCompile libraries.jboss_annotation_spec_jar
 
-    // Additional tests requiring Javassist
-    // folder in src/javassist/java
-    testJavassistCompile libraries.javassist
 }
 
 jar {
@@ -265,35 +247,3 @@ test {
     }
 }
 
-//Create the task that runs the integration tests found from the
-//configured source directory and uses the correct classpath.
-task testJavassist(type: Test) {
-    testClassesDirs = sourceSets.testJavassist.output.classesDirs
-    classpath = sourceSets.testJavassist.runtimeClasspath
-    //If you want to ensure that integration tests are run every time when you invoke
-    //this task, uncomment the following line.
-    //outputs.upToDateWhen { false }
-
-    if ( gradle.ext.javaToolchainEnabled ) {
-        // Configure version of Java tools
-        javaLauncher = javaToolchains.launcherFor {
-            languageVersion = gradle.ext.javaVersions.test.launcher
-        }
-
-        //  Configure JVM Options
-        jvmArgs( getProperty( 'toolchain.launcher.jvmargs' ).toString().split( ' ' ) )
-
-        // Display version of Java tools
-        doFirst {
-            logger.lifecycle "Testing javassist with '${javaLauncher.get().metadata.installationPath}'"
-        }
-    }
-
-    if ( gradle.ext.javaVersions.test.launcher.asInt() >= 9 ) {
-        // Javassist needs this to generate proxies
-        jvmArgs( ['--add-opens', 'java.base/java.lang=ALL-UNNAMED'] )
-    }
-}
-
-check.dependsOn testJavassist
-testJavassist.mustRunAfter test
